# Static-Site-Generator

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  static_site_generator_docs.md
.github/workflows/: test.yml
docs/: ARCHITECTURE.md  EVALUATION.md  SECURITY.md
docs/adr/: 0001-full-rebuild-over-incremental.md  0002-markdown-library-behind-adapter.md  0003-template-engine-through-adapter.md  0004-no-web-layer.md  0005-generated-pages-before-final-render.md  0006-incremental-watch-sitemap-yaml.md
docs/spec/: Static Site Generator.txt  static_site_generator_improved_full_scope.txt
example_site/: site.toml
example_site/content/: about.md  index.md
example_site/content/blog/: draft-post.md  first-post.md
example_site/layouts/: index.html  post.html
example_site/partials/: footer.html  header.html
example_site/static/css/: style.css
schema/: README.md  asset.schema.json  build-manifest.schema.json  page.schema.json  site.schema.json
scripts/: check.ps1
ssg/: __init__.py  __main__.py  assets.py  builder.py  cache.py  cli.py  config.py  discovery.py  errors.py  frontmatter.py  manifest.py  markdown_adapter.py  models.py  page_builder.py  renderer.py  scaffold.py  site_model.py  sitemap.py  template_adapter.py  watch.py  writer.py
tests/: conftest.py  test_assets_writer_extended.py  test_builder_errors.py  test_builder_extended.py  test_cache.py  test_cli.py  test_config.py  test_config_extended.py  test_coverage_final.py  test_discovery.py  test_errors.py  test_frontmatter.py  test_frontmatter_extended.py  test_main.py  test_manifest_module.py  test_markdown_adapter.py  test_markdown_extended.py  test_new_features.py  test_page_builder.py  test_page_site_extended.py  test_pipeline_integration.py  test_renderer.py  test_renderer_extended.py  test_scaffold.py  test_site_model.py  test_sitemap.py  test_template_adapter.py  test_template_extended.py  test_watch.py  test_writer_assets.py
