[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "static-site-generator"
version = "0.4.0"
description = "A small Python static site generator with a staged build pipeline."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Prince" }]
keywords = ["static-site-generator", "markdown", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Documentation",
    "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = [
    "Markdown>=3.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "mypy>=1.0",
    "ruff>=0.14",
]

[project.urls]
Documentation = "https://github.com/PrincetonAfeez/Static-Site-Generator#readme"
Repository = "https://github.com/PrincetonAfeez/Static-Site-Generator"
Changelog = "https://github.com/PrincetonAfeez/Static-Site-Generator/blob/main/CHANGELOG.md"

[project.scripts]
ssg = "ssg.cli:main"

[tool.setuptools.packages.find]
include = ["ssg*"]

[tool.setuptools.package-data]
ssg = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
source = ["ssg"]
branch = false

[tool.coverage.report]
fail_under = 97
show_missing = true

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_untyped_calls = false
check_untyped_defs = false
warn_return_any = false
disallow_incomplete_defs = false

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["I001"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E501"]
